<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootlo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/button_border_round_3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_05"
            android:gravity="center|center_vertical"
            android:padding="4dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/padding_10"
                android:gravity="center_vertical"
                android:text="@string/app_name_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_largesize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagetxtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="3dp"
                android:text="Are you sure you want to charge for extra stop?"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_mediumsize"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/m_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_20"
                android:layout_weight="1"
                android:background="@drawable/button_border_round_1"
                android:paddingBottom="@dimen/padding_10"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:text="@string/yes_msg"
                android:textAllCaps="false"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_mediumsize" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/margin_20"
                android:layout_weight="1"
                android:background="@drawable/button_border_round_1"
                android:paddingBottom="@dimen/padding_10"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:text="@string/no_msg"
                android:textAllCaps="false"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_mediumsize" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>