<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_row_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/off_white"
        android:clickable="true"
        android:elevation="@dimen/margin_15"
        app:cardCornerRadius="@dimen/margin_15">

        <LinearLayout
            android:id="@+id/ll_week_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_05"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_05"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_date"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />

                    <TextView
                        android:id="@+id/tv_from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_05"
                    android:layout_marginLeft="@dimen/margin_05"
                    android:layout_marginRight="@dimen/margin_05"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_date"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />

                    <TextView
                        android:id="@+id/tv_to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_05"
                    android:layout_marginLeft="@dimen/margin_05"
                    android:layout_marginRight="@dimen/margin_05"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly_total_amount"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />

                    <TextView
                        android:id="@+id/tv_weekly_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_05"
                    android:layout_marginLeft="@dimen/margin_05"
                    android:layout_marginRight="@dimen/margin_05"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weekly Tip :"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />

                    <TextView
                        android:id="@+id/tv_weekly_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/text_mediumsize" />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_05"
                android:src="@mipmap/forward_img" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>


